--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,16 +1,18 @@
 <TeamSelector />
 
-<TeamSidebar />
+<!--<TeamSidebar />-->
 
 <!-- Channel -->
 <main class="flex-1 flex flex-col bg-white overflow-hidden channel">
 
-  <ChannelHeader/>
+  <ChannelHeader
+    @title="coocloud"
+    @description="General coocloud things related"/>
 
   <!-- Channel Message List -->
   <div class="py-4 flex-1 overflow-y-scroll channel-messages-list" role="list">
     <Message />
   </div>
 
-  <ChannelFooter />
+  <!--<ChannelFooter />-->
 </main>
