--- a/app/templates/teams.hbs
+++ b/app/templates/teams.hbs
@@ -1,1 +1,18 @@
-{{outlet}}
+<TeamSelector />
+
+<!--<TeamSidebar />-->
+
+<!-- Channel -->
+<main class="flex-1 flex flex-col bg-white overflow-hidden channel">
+
+  <ChannelHeader
+    @title="coocloud"
+    @description="General coocloud things related"/>
+
+  <!-- Channel Message List -->
+  <div class="py-4 flex-1 overflow-y-scroll channel-messages-list" role="list">
+    <Message />
+  </div>
+
+  <!--<ChannelFooter />-->
+</main>
