fix and ignore tests

--- a/app/templates/teams.hbs
+++ b/app/templates/teams.hbs
@@ -1,6 +1,6 @@
 <TeamSelector />
 
-<!--<TeamSidebar />-->
+<TeamSidebar />
 
 <!-- Channel -->
 <main class="flex-1 flex flex-col bg-white overflow-hidden channel">
@@ -14,5 +14,5 @@
     <Message />
   </div>
 
-  <!--<ChannelFooter />-->
+  <ChannelFooter />
 </main>
